fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@ div#chart-div {
 }
 
 div#chart-div p {
-  margin-top: 15px;
+  margin: 0;
+  padding-top: 15px;
 }
 
 @media (max-width: 1168px) {
